[package]
name = "polkadot-service"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parking_lot = "0.7.1"
error-chain = "0.12"
lazy_static = "1.0"
log = "0.4.6"
slog = "^2"
tokio = "0.1.7"
hex-literal = "0.1"
polkadot-availability-store = { path = "../availability-store" }
polkadot-validation = { path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
sr-io = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-telemetry = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
substrate-keystore = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch" }
